<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="search">Search</string>
    <string name="filter_button_description">Filter button</string>
    <string name="image_view_character_description">Image view for character</string>
    <string name="location">Location</string>
    <string name="dimension">Dimension</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="submit">Submit</string>
    <string name="type">Type</string>
    <string name="episode_code">Episode code</string>
    <string name="gender">Gender</string>
    <string name="status">Status:</string>
    <string name="clear_filter">Clear filter</string>
    <string name="filter">Filter</string>
    <string name="species">Species:</string>
    <string name="type_title">Type:</string>
    <string name="gender_title">Gender:</string>
    <string name="origin_title">Origin:</string>
    <string name="location_title">Location:</string>
    <string name="episodes_title">Episodes:</string>
    <string name="back">Back</string>
    <string name="species_title">Species</string>
    <string name="status_title">Status</string>

    <string-array name="gender">
        <item>Any</item>
        <item>Male</item>
        <item>Female</item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="status">
        <item>Any</item>
        <item>Alive</item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>

    <string name="toast_filter_characters">No characters found, check filter or/and connect to network for loading more data</string>
    <string name="toast_filter_locations">No locations found, check filter or/and connect to network for loading more data</string>
    <string name="toast_filter_episodes">No episodes found, check filter or/and connect to network for loading more data</string>

    <string name="toast_empty_list">No data found, connect to network for loading</string>

    <string name="toast_empty_filter">Filter is empty</string>
    <string name="toast_same_filter">Same filter</string>

    <string name="no_characters">There is no characters in this location</string>

    <string name="toast_more_episodes_in_character">There is more episodes, connect to network to receive them</string>
    <string name="toast_more_characters_in_location">There is more characters in this location, connect to network to receive them</string>
    <string name="toast_more_characters_in_episode">There is more characters in this episode, connect to network to receive them</string>

    <string name="toast_characters_in_location">There is characters in this location, connect to network to receive them</string>
    <string name="toast_characters_in_episode">There is characters in this episode, connect to network to receive them</string>
    <string name="toast_episodes_in_character">There is characters in this location, connect to network to receive them</string>


</resources>