<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_name_filter_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/name"
            android:textSize="@dimen/info_text_view"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_name_filter_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_view_status_filter_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/status_title"
            android:textSize="@dimen/info_text_view"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_status_filter_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/transparent"
            android:entries="@array/status" />

        <TextView
            android:id="@+id/text_view_species_filter_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/species_title"
            android:textSize="@dimen/info_text_view"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_species_filter_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_view_type_filter_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/type"
            android:textSize="@dimen/info_text_view"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_type_filter_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_view_gender_filter_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/gender"
            android:textSize="@dimen/info_text_view"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_gender_filter_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/transparent"
            android:entries="@array/gender" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>